corrected some classnames and added z-index property for modal window in styles

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   justify-content: space-around;
   margin-top:30vh;
 }
-.modal{
+.show-modal{
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
   border-radius: 20px;
@@ -25,22 +25,23 @@ body {
   background-color:rgb(182, 151, 73);
   color:lightgreen;
 }
-.modal:hover{
+.show-modal:hover{
   background-color:rgb(184, 146, 50);
   transform:scale(1.1);
   cursor: pointer;
 }
 
-.info{
+.modal{
   color:rgb(184, 146, 50);
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   text-align: center;
   background-color:rgb(107, 187, 107);
-  max-width:50%;
+  max-width:70%;
   margin-top:20px;
   border-radius: 5px;;
   position: relative;
+  z-index: 10;
 }
 h1{
   padding:30px;
@@ -72,7 +73,7 @@ h1{
 }
 
 @media only screen and (min-width: 700px) {
-  .modal{
+  .show-modal{
     font-size: 28px;
     border-radius: 30px;
     padding:15px 20px;
@@ -84,7 +85,7 @@ h1{
   main{
     max-width:1300px ;
   }
-  .modal{
+  .show-modal{
     font-size: 32px;
     padding:20px 25px;
 }
